toytoolkit: Don't destroy window cairo surface on shm attach.

https://bugs.freedesktop.org/show_bug.cgi?id=52454